bending and transverse shear

--- a/src/pages/sol/bending.astro
+++ b/src/pages/sol/bending.astro
@@ -186,11 +186,13 @@ Complex (or composite) areas can be divided into smaller, easier parts.
 </SubSubSection>
 
 <SubSubSection title="Second Moment or Area Moment of Inertia" id="second-moi">
-The moment of inertia of the area <InlineEquation equation='A' /> with respect to the z-axis is given by <InlineEquation equation='I_x = \\int_A y^2 dA' />.
+The moment of inertia of the area <InlineEquation equation='A' /> with respect to the x-axis.
 
+<DisplayEquation equation='I_x = \\int_A y^2 dA' title="x-axis second moment." background="True" />
 
+The moment of inertia of the area <InlineEquation equation='A' /> with respect to the y-axis.
 
-The moment of inertia of the area <InlineEquation equation='A' /> with respect to the y-axis is given by <InlineEquation equation='I_y = \\int_A x^2 dA' />.
+<DisplayEquation equation='I_y = \\int_A x^2 dA' title="y-axis second moment." background="True" />
 
 <br>
 <em>Note:</em>  polar moment of inertia in this plane 
@@ -204,7 +206,7 @@ The moment of inertia of the area <InlineEquation equation='A' /> with respect t
 
 
 <SubSubSection title="Moment of Inertia Summary" id="summary-moi">
-    <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes.png' width='5'>  Common shapes</Image>
+    <Image src='/Solid_Mechanics/Bending-Figures/CommonShapes.png' width='5'>  Common shapes about the origin: <InlineEquation equation='I'/> and <InlineEquation equation='J_O'/> <br> Common shapes about the centroid: <InlineEquation equation='\\bar{I}'/> and <InlineEquation equation='J_c'/> </Image>
 
     <DisplayTable class_="text-center" id="inertia-table">
         <thead>
