Added 3d sign convention figure

--- a/src/pages/sol/shear_moment_diagrams.astro
+++ b/src/pages/sol/shear_moment_diagrams.astro
@@ -35,7 +35,8 @@ To determine how the internal shear force and bending moment change throughout t
 
 <SubSection title="Sign Conventions" id="sign_conventions">
 
-<Image src='/Statics/IntForceFigures/SignConventions.jpg' width='5'> Sign conventions for internal forces and moments</Image>
+<Image src='/Statics/IntForceFigures/SignConventions.jpg' width='6'> Sign conventions for internal forces and moments</Image>
+<Image src='/Statics/IntForceFigures/faceSignConvention3D_arb.png' width='6'> Sign conventions for internal forces and moments in 3D</Image>
 
 </SubSection>
 
