--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -55,7 +55,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
                 <strong>Mass moment of inertia</strong>
             </th>
             <th>
-                <strong>Area moment of inertia</strong>
+                <strong>Area moment of inertia (used in Statics!)</strong>
             </th>
         </tr>
     </thead>
@@ -171,7 +171,7 @@ Moments of inertia of simple shapes can be combined to calculate the moments of 
 
 <SubSection title="Moment of inertia for typical shapes" id="typical_shapes">
 
-<Image src='/Statics/MOIFigures/TypicalMOI.png' width='5'></Image>
+<Image src='/Solid_Mechanics/Bending-Figures/CommonShapes.png' width='5'>  Common shapes about the origin: <InlineEquation equation='I'/> and <InlineEquation equation='J_O'/> <br> Common shapes about the centroid: <InlineEquation equation='\\bar{I}'/> and <InlineEquation equation='J_c'/> </Image>
 
 </SubSection>
 
