--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -104,7 +104,7 @@ Zero force members are members in a truss structure that experience no force. Th
 
 <!-- lecture 18 -->
 
-<SubSection title="Truss Analysis: Joints" id="joints">
+<SubSection title="Truss Analysis: Method of Joints" id="joints">
 
 Method of joints for truss analysis: 
 <Enumerate>
@@ -119,9 +119,9 @@ Method of joints for truss analysis:
 
 </SubSection>
 
-<SubSection title="Truss Analysis: Sections" id="sections">
+<SubSection title="Truss Analysis: Method of Sections" id="sections">
 
-<Image src='/Statics/TrussFigures/MethodofSections.jpg' width='5'>Example of methods of sections for joint analysis</Image>
+<Image src='/Statics/TrussFigures/MethodofSections.jpg' width='6'>Example of methods of sections for joint analysis</Image>
 
 <!-- lecture 19  -->
 
