--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -43,7 +43,7 @@ The main assumptions for trusses and truss structures are:
 	<Item>The weight of the truss is negligible.</Item>
 </Enumerate>
 <p>
-Because of these assumptions, all trusses are <em>two force members</em>, with the forces on the truss acting along the axis of the member. 
+Because of these assumptions, all trusse members are <em>two force members</em>, with the forces on the truss acting along the axis of the member. 
 
 If the forces on the truss member "stretch" it, the member is in tension. 
 
