--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -136,7 +136,7 @@ Image src='/Statics/TrussFigures/ExplodedTruss.jpg' width='5'></Image>
 <SubSection title="Truss Analysis: Method of Sections" id="sections">
 
 <p> 
-The method of section is helpful for determining the internal forces inside a truss member. The first step for the method of sections is the same as the firts step for the method of joints: Draw a FBD for the entire truss and solve for the external forces at the supports. 
+The method of sections is helpful for determining the internal forces inside a truss member. The first step for the method of sections is the same as the firts step for the method of joints: Draw a FBD for the entire truss and solve for the external forces at the supports. 
 
 Then, you "cut" the truss so that the internal force you want is "exposed" from the cut and analyze the two parts of the truss system to solve for the internal forces of the truss members. 
 </p>
