--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -72,7 +72,7 @@ resulting in
 <Image src='/Statics/TrussFigures/2ForceMembers.jpg' width='6'> Examples of different two force members.</Image>
 
 <p>
-Specifically, the line of action of the two forces on the member act along the line between the two points where they are applied. 
+Specifically, the two forces act along the line between the two points where they are applied. 
 </p>
 
 </SubSection>
