--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -129,7 +129,7 @@ Method of joints for truss analysis:
 <p><em>Note:</em> Remember that truss members that are in compression "push back" on the pin joints, and truss members that are in tension "pull" on the pin joints. 
 </p>
 
-Image src='/Statics/TrussFigures/ExplodedTruss.jpg' width='5'></Image>
+<Image src='/Statics/TrussFigures/ExplodedTruss.jpg' width='5'></Image>
 
 </SubSection>
 
