--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -100,7 +100,7 @@ Zero force members are members in a truss structure that experience no force. Th
 
 <PrairieDrawCanvas id="rfb-xzf-f" height="600" width="600">
 	<p class="controls">
-		<button class="option-toggle:rfb-xzf-f:FBD" onclick="rfb_xzf_f.toggleOption('FBD')">free-body diagram</button>
+		<!--<button class="option-toggle:rfb-xzf-f:FBD" onclick="rfb_xzf_f.toggleOption('FBD')">free-body diagram</button> -->
 	</p>
 	<Row>
 		<Col values="12">
